Fix header layout for different screen sizes Add collapsing menu fo xs screen size

--- a/src/main/webapp/WEB-INF/css/common.css
+++ b/src/main/webapp/WEB-INF/css/common.css
@@ -3,7 +3,6 @@ html, body, .full-height {
 }
 
 body {
-	/* TODO: Use correct padding from menu on smaller scale screens. */
 	padding-top: 60px;
 }
 
@@ -15,6 +14,12 @@ nav {
 	color: black;
 	text-decoration: none;
 	font-size: 175%;
+}
+
+@-moz-document url-prefix() {
+	.logo-border {
+		padding-top: 5px;
+	}
 }
 
 .logo-border {
@@ -29,4 +34,8 @@ nav {
 	color: white;
 	overflow: auto;
 	padding-bottom: 5px;
+}
+
+.top-padding {
+	padding-top: 5px;
 }
