--- a/src/main/webapp/WEB-INF/css/login.css
+++ b/src/main/webapp/WEB-INF/css/login.css
@@ -1,7 +1,3 @@
-.log-in-form {
-	padding-top: 5px;
-}
-
 #profile-picture {
 	display: none;
 }
