--- a/src/main/webapp/WEB-INF/css/profile.css
+++ b/src/main/webapp/WEB-INF/css/profile.css
@@ -1,7 +1,3 @@
-.user-menu, .menu {
-	padding-top: 5px;
-}
-
 #selected-user {
 	display: table;
 	width: 100%;
